[package]
name = "mios"
version = "0.1.0"
authors = ["Josh Hawkins <hawkins@users.noreply.github.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-mios.json"

[dependencies]
bootloader = "0.4.0"
volatile = "0.2.6"
spin = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
